--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,9 @@ setuptools==80.7.1
 six==1.17.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow_intel==2.18.0
+tensorflow_keras==0.1
 termcolor==3.1.0
 threadpoolctl==3.6.0
 typing_extensions==4.13.2
